--- a/zuulgateway.properties
+++ b/zuulgateway.properties
@@ -2,3 +2,4 @@ zuul.routes.discoveryserver.url=http://localhost:8761
 #zuul.routes.moviemanagement.path=/moviemanagement/**
 #zuul.routes.moviemanagement.serviceId=moviemanagement
 server.port=8086
+zuul.sensitiveHeaders=Authorization
